--- a/LoginRegistrationForm/Properties/Resources.resx
+++ b/LoginRegistrationForm/Properties/Resources.resx
@@ -139,4 +139,7 @@
   <data name="ChatGPT Image 09_11_37 7 thg 6, 2025" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ChatGPT Image 09_11_37 7 thg 6, 2025.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="anh-mo-ta" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\anh-mo-ta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
